--- a/module2-solution/CSS/Styles.css
+++ b/module2-solution/CSS/Styles.css
@@ -15,30 +15,31 @@ h1{
 
 .section{
   border: 1px solid black;
-  background-color: #A52A2A;
+  background-color: #BDBDB0;
   position: relative;
   left: 0px;
   top: 0px;
-  height: 200px;
-  overflow: scroll;
+  /*height: 200px;*/
+  /*overflow: scroll;*/
   padding: 5px;
   margin: 5px;
+  padding-bottom: 35px;
+  /*display: block;*/
 }
 
 p.menue {
   /*width: 90%;
   height: 150px;*/
-  color: white;
+  color: black;
   text-align: justify-all;
   position: relative;
   top: 30px;
-  margin: 0px;
   font-family: "Times New Roman", Times, serif;
 }
 
 p.sectionTitle1, p.sectionTitle2, p.sectionTitle3{
   border: 1px solid black;
-	color: red;
+	color: #251414;
 	position: absolute;
 	top: 0px;
 	right: 0px;
@@ -49,17 +50,24 @@ p.sectionTitle1, p.sectionTitle2, p.sectionTitle3{
   font-size: 125%;
 }
 
+.row{
+  display: inline-block
+}
+
 p.sectionTitle1{
-background-color: yellow;
+background-color: #B9B90C;
 }
 
 p.sectionTitle2{
-background-color: #009922;
+background-color: #809E86;
 }
 
 p.sectionTitle3{
-background-color: blue;
+background-color: #5F5F80;
 }
+
+
+
 /* Desktop view */
 @media(min-width: 992px ){
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
